src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequestEvent__e/EmrServerOutboundRequestEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event object used to track and log each single outbound EMR REST API operations.</description>
    <label>EMR Server Outbound Request Event</label>
    <pluralLabel>EMR Server Outbound Request Events</pluralLabel>
</CustomObject>