src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequestEvent__e/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>