src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequestEvent__e/fields/RequestDuration__c.field-meta.xml
<CustomField>
    <fullName>RequestDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Request Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>