src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequestEvent__e/fields/RequestPayload__c.field-meta.xml
<CustomField>
    <fullName>RequestPayload__c</fullName>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>