src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequestEvent__e/fields/ResponsePayload__c.field-meta.xml
<CustomField>
    <fullName>ResponsePayload__c</fullName>
    <label>Response Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>