src/global/core-modules/emr-server-mgmt/objects/EmrServerOutboundRequestEvent__e/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>Status Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>